// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs no-unsafe-enum-comparison.mdx code examples ESLint output 1`] = `
"Incorrect

enum Fruit {
  Apple,
}

declare let fruit: Fruit;

// bad - comparison between enum and explicit value instead of named enum member
fruit === 0;
~~~~~~~~~~~ The two values in this comparison do not have a shared enum type.

enum Vegetable {
  Asparagus = 'asparagus',
}

declare let vegetable: Vegetable;

// bad - comparison between enum and explicit value instead of named enum member
vegetable === 'asparagus';
~~~~~~~~~~~~~~~~~~~~~~~~~ The two values in this comparison do not have a shared enum type.

declare let anyString: string;

// bad - comparison between enum and non-enum value
anyString === Vegetable.Asparagus;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ The two values in this comparison do not have a shared enum type.
"
`;

exports[`Validating rule docs no-unsafe-enum-comparison.mdx code examples ESLint output 2`] = `
"Correct

enum Fruit {
  Apple,
}

declare let fruit: Fruit;

fruit === Fruit.Apple;

enum Vegetable {
  Asparagus = 'asparagus',
}

declare let vegetable: Vegetable;

vegetable === Vegetable.Asparagus;
"
`;
